; ModuleID = '/home/carl/AnghaBench/ish/kernel/extr_signal.c_altstack_to_user.c'
source_filename = "/home/carl/AnghaBench/ish/kernel/extr_signal.c_altstack_to_user.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { %struct.TYPE_3__ }
%struct.TYPE_3__ = type { i32 }
%struct.sighand = type { i64, i32 }
%struct.stack_t_ = type { i64, i32, i32 }

@SS_DISABLE_ = common dso_local global i32 0, align 4
@current = common dso_local global %struct.TYPE_4__* null, align 8
@SS_ONSTACK_ = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (%struct.sighand*, %struct.stack_t_*)* @altstack_to_user to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @altstack_to_user(%struct.sighand* %0, %struct.stack_t_* %1) #0 {
  %3 = alloca %struct.sighand*, align 8
  %4 = alloca %struct.stack_t_*, align 8
  store %struct.sighand* %0, %struct.sighand** %3, align 8
  store %struct.stack_t_* %1, %struct.stack_t_** %4, align 8
  %5 = load %struct.sighand*, %struct.sighand** %3, align 8
  %6 = getelementptr inbounds %struct.sighand, %struct.sighand* %5, i32 0, i32 0
  %7 = load i64, i64* %6, align 8
  %8 = load %struct.stack_t_*, %struct.stack_t_** %4, align 8
  %9 = getelementptr inbounds %struct.stack_t_, %struct.stack_t_* %8, i32 0, i32 0
  store i64 %7, i64* %9, align 8
  %10 = load %struct.sighand*, %struct.sighand** %3, align 8
  %11 = getelementptr inbounds %struct.sighand, %struct.sighand* %10, i32 0, i32 1
  %12 = load i32, i32* %11, align 8
  %13 = load %struct.stack_t_*, %struct.stack_t_** %4, align 8
  %14 = getelementptr inbounds %struct.stack_t_, %struct.stack_t_* %13, i32 0, i32 2
  store i32 %12, i32* %14, align 4
  %15 = load %struct.stack_t_*, %struct.stack_t_** %4, align 8
  %16 = getelementptr inbounds %struct.stack_t_, %struct.stack_t_* %15, i32 0, i32 1
  store i32 0, i32* %16, align 8
  %17 = load %struct.sighand*, %struct.sighand** %3, align 8
  %18 = getelementptr inbounds %struct.sighand, %struct.sighand* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = icmp eq i64 %19, 0
  br i1 %20, label %21, label %27

21:                                               ; preds = %2
  %22 = load i32, i32* @SS_DISABLE_, align 4
  %23 = load %struct.stack_t_*, %struct.stack_t_** %4, align 8
  %24 = getelementptr inbounds %struct.stack_t_, %struct.stack_t_* %23, i32 0, i32 1
  %25 = load i32, i32* %24, align 8
  %26 = or i32 %25, %22
  store i32 %26, i32* %24, align 8
  br label %27

27:                                               ; preds = %21, %2
  %28 = load %struct.TYPE_4__*, %struct.TYPE_4__** @current, align 8
  %29 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %28, i32 0, i32 0
  %30 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load %struct.sighand*, %struct.sighand** %3, align 8
  %33 = call i64 @is_on_altstack(i32 %31, %struct.sighand* %32)
  %34 = icmp ne i64 %33, 0
  br i1 %34, label %35, label %41

35:                                               ; preds = %27
  %36 = load i32, i32* @SS_ONSTACK_, align 4
  %37 = load %struct.stack_t_*, %struct.stack_t_** %4, align 8
  %38 = getelementptr inbounds %struct.stack_t_, %struct.stack_t_* %37, i32 0, i32 1
  %39 = load i32, i32* %38, align 8
  %40 = or i32 %39, %36
  store i32 %40, i32* %38, align 8
  br label %41

41:                                               ; preds = %35, %27
  ret void
}

declare dso_local i64 @is_on_altstack(i32, %struct.sighand*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
